# ffmpeg-benchmark

./: Dockerfile  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
ffmpeg_benchmark/: __init__.py  loggers.py  main.py  monitoring.py  probe.py  psnr.py  transcode.py  utils.py  vmaf.py
